--- a/formularioContacto.html
+++ b/formularioContacto.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="C:\Users\Admin\Desktop\curso_Python\webPage1\js\bootstrap.min.js">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="css/estilosFormularios.css">
 </head>
 
 <body>
