--- a/formularioContacto.html
+++ b/formularioContacto.html
@@ -35,7 +35,7 @@
             <div class="jumbotron jumbotron-fluid">
                 <h1 class="display-4">Dejanos tus datos de contacto</h1>
             </div>
-            <form action="" method="POST" class="formulario" id="formulario">
+            <form action="link" method="POST" class="formulario" id="formulario">
                 <!-- Grupo: fname -->
                 <div class="formulario__grupo" id="grupo__fname">
                     <label for="fname" class="formulario__label">Nombre</label>
