--- a/paquetes.html
+++ b/paquetes.html
@@ -66,9 +66,15 @@
                 <p>PRECIO POR PERSONA EN BASE DOBLE PARA PAGO EN DÓLARES U$D 1.094 + 60 impuestos <br> Para pagos en pesos argentinos se deberá sumar por persona :U$D 247 impuesto PAIS sobre servicios terrestres y U$D 298 impuesto RG4815 sobre servicios
                     terrestres
                 </p>
-                <p>El programa incluye: <br> • Traslados indicados en programa. <br> • Visita de Medio Día a las Pirámides con guía local de habla hispana. <br> • 3 noches en alojamiento y desayuno Buffet en El Cairo. <br> • Cena con espectáculo de danza
-                    del vientre en un barco por el Nilo. Seguro de viaje
-                </p>
+                <p>El programa incluye:</p>
+                <ul>
+                    <li> Traslados indicados en programa.</li>
+                    <li> Visita de Medio Día a las Pirámides con guía local de habla hispana. </li>
+                    <li> 3 noches en alojamiento y desayuno Buffet en El Cairo. </li>
+                    <li> Cena con espectáculo de danza del vientre en un barco por el Nilo.</li>
+                    <li>Seguro de viaje</li>
+
+                </ul>
             </div>
             <div class="foto2">
                 <img src="IMAGENES/paquetesEC.jpg" alt="El Cairo" height="400px" width="300px">
@@ -79,7 +85,13 @@
                 <h2>
                     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">Atenas - 4 dias/ 3noches</h2>
                 <p> PRECIO POR PERSONA EN BASE DOBLE PARA PAGO EN DÓLARES U$D 980 + 41 impuestos <br> Para pagos en pesos argentinos se deberá sumar por persona :U$D 230 impuesto PAIS sobre servicios terrestres y U$D 245 impuesto RG4815 sobre servicios terrestres</p>
-                <p>El programa incluye: <br> • Traslados de llegada y salida. <br> • Visita ciudad medio día. <br> • 3 noches en alojamiento y desayuno en el hotel elegido. Seguro de viaje</p>
+                <p>El programa incluye: <br>
+                    <ul>
+                        <li> Traslados de llegada y salida. </li>
+                        <li> Visita ciudad medio día. </li>
+                        <li> 3 noches en alojamiento y desayuno en el hotel elegido.</li>
+                        <li> Seguro de viaje</li>
+                    </ul>
             </div>
             <div class="foto 3">
                 <img src="IMAGENES/paquetessA.jpg" alt="Atenas" height="400px" width="300px">
