--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <img id="img2" src="IMAGENES/index2.jpg" height="300px" width="auto">
             <img id="img3" src="IMAGENES/index3pg.jpg" height="300px" width="auto">
             <img id="img4" src="IMAGENES/index4.jpg" height="300px" width="auto">
-            <img id="img5" src="IMAGENES/sanMartinAndes.jpeg" height="300px" width="auto">
+            <img id="img5" src="IMAGENES/index5.jpg" height="300px" width="auto">
         </section>
         <div id="contenido-principal">
 
