--- a/formularioContacto.html
+++ b/formularioContacto.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contactanos</title>
+    <title>CONTACTANOS</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="C:\Users\Admin\Desktop\curso_Python\webPage1\css\bootstrap.min.css">
     <link rel="stylesheet" href="C:\Users\Admin\Desktop\curso_Python\webPage1\js\bootstrap.min.js">
