--- a/formularioContacto.html
+++ b/formularioContacto.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CONTACTANOS</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="stylesheet" href="C:\Users\Admin\Desktop\curso_Python\webPage1\css\bootstrap.min.css">
-    <link rel="stylesheet" href="C:\Users\Admin\Desktop\curso_Python\webPage1\js\bootstrap.min.js">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="js\bootstrap.min.js">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/estilosFormularios.css">
